# bevy_rapier

bevy_rapier2d/: Cargo.toml
bevy_rapier3d/: Cargo.toml
