[package]
name = "bevy_rapier3d"
version = "0.7.0"
authors = ["Sébastien Crozet <developer@crozet.re>"]
description = "3-dimensional physics engine in Rust, official Bevy plugin."
documentation = "http://docs.rs/bevy_rapier3d"
homepage = "http://rapier.rs"
repository = "https://github.com/dimforge/bevy_rapier"
readme = "README.md"
keywords = [ "physics", "dynamics", "rigid", "real-time", "joints" ]
license = "Apache-2.0"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "../src/lib.rs"
required-features = [ "dim3" ]

[features]
default = [ "dim3", "render" ]
dim3 = []
render = [ "bevy/render" ]
parallel = [ "rapier3d/parallel" ]
simd-stable = [ "rapier3d/simd-stable" ]
simd-nightly = [ "rapier3d/simd-nightly" ]
wasm-bindgen = [ "rapier3d/wasm-bindgen" ]
serde-serialize = [ "rapier3d/serde-serialize" ]
enhanced-determinism = [ "rapier3d/enhanced-determinism" ]

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "3d0c4e380ca0776f810252730a6d9cc53119a155", default-features = false }
nalgebra = "0.23"
rapier3d = "0.4"
concurrent-queue = "1"

[dev-dependencies]
bevy_wgpu = { git = "https://github.com/bevyengine/bevy", rev = "3d0c4e380ca0776f810252730a6d9cc53119a155" }
bevy_winit = { git = "https://github.com/bevyengine/bevy", rev = "3d0c4e380ca0776f810252730a6d9cc53119a155", features = [ "x11" ] }
